# chimera

./: Dockerfile
backend/: .env  Cargo.toml  scripts.txt
backend/migrations/2023-05-10-185537_create_game/: down.sql  up.sql
backend/migrations/2023-05-11-222349_create-users/: down.sql  up.sql
backend/migrations/2023-05-11-222516_day-index/: down.sql  up.sql
backend/migrations/2023-05-15-190432_create-stats/: down.sql  up.sql
backend/migrations/2023-05-17-181900_create-missing-index/: up.sql
backend/seed-scripts/: create_boards.js  package-lock.json  package.json
backend/src/: error_handler.rs  main.rs  routes.rs  schema.rs
backend/src/database/: mod.rs
backend/src/database/models/: mod.rs
backend/src/models/: game.rs  guest.rs  mod.rs  token.rs  user.rs
backend/src/routes/: game_routes.rs  guest_routes.rs  user_routes.rs  utils.rs
backend/src/services/: game_service.rs  guest_service.rs  mod.rs  user_service.rs
chimera/: .gitignore  README.md  mix.exs
chimera/config/: config.exs  dev.exs  runtime.exs  test.exs
chimera/lib/: chimera.ex  chimera_web.ex
chimera/lib/chimera/: application.ex  repo.ex
chimera/lib/chimera_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
chimera/priv/repo/: seeds.exs
chimera/test/: test_helper.exs
chimera/test/support/: conn_case.ex  data_case.ex
frontend/: package-lock.json  package.json
frontend/src/: app.html
frontend/src/apis/: day_apis.ts  game_apis.ts  guest_api.ts  leaderboard_apis.ts  models.ts  user_apis.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
(+28 files in other folders)
