[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
tokio = { version = "1.26.0", features = ["full"] } 
hyper = { version = "0.14.25", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
diesel = { version = "2.0.0", features = ["sqlite"] }
dotenvy = "0.15"
chrono = { version = "0.4.19", features = ["serde"] }
